--- a/my-week-4-website/index.html
+++ b/my-week-4-website/index.html
@@ -6,10 +6,10 @@
     <body>
         <h1>ALL HTML</h1>
 
-        <a href="week4-site">site 1</a>
+        <a href="pages/page-1.html">site 1</a>
         
-        <a href="week4-site2">site 2</a>
+        <a href="pages/page-2.html">site 2</a>
 
-        <a href="week4-site3">site 2</a>
+        <a href="pages/page-3.html">site 2</a>
     </body>
 </html>
