--- a/my-week-4-website/pages/page-2.html
+++ b/my-week-4-website/pages/page-2.html
@@ -67,7 +67,7 @@
     <h48 style="font-size:50px; position: absolute; top: 1350px; left: 600px;">&#10006;&#65039;</h48>
     <h49 style="font-size:50px; position: absolute; top: 1350px; left: 650px;">&#128242;</h49>
     
-    <audio src="Audio/sos.mp3" controls style="position: absolute; top: 1450px; left: 450px">
+    <audio src="../Audio/sos.mp3" controls style="position: absolute; top: 1450px; left: 450px">
     </audio>
 </center>   
 </body>
