--- a/my-week-4-website/pages/page-3.html
+++ b/my-week-4-website/pages/page-3.html
@@ -8,39 +8,39 @@
     </center>
     <hr size="2" width="20%" align="center" color="#ffdd00" style="position: absolute; top: 80px; left: 520px;">
     <left>
-        <audio src="Audio/September.mp3" controls style="position: absolute; top: 200px; left: 50px">
+        <audio src="../Audio/September.mp3" controls style="position: absolute; top: 200px; left: 50px">
         </audio>
-        <audio src="Audio/Inolvidable.mp3" controls style="position: absolute; top: 300px; left: 50px">
+        <audio src="../Audio/Inolvidable.mp3" controls style="position: absolute; top: 300px; left: 50px">
         </audio>
-        <audio src="Audio/Alessia Cara - October (Audio).mp3" controls style="position: absolute; top: 400px; left: 50px">
+        <audio src="../Audio/Alessia Cara - October (Audio).mp3" controls style="position: absolute; top: 400px; left: 50px">
         </audio>
-        <audio src="Audio/Muerte En Hawaii.mp3" controls style="position: absolute; top: 500px; left: 50px">
+        <audio src="../Audio/Muerte En Hawaii.mp3" controls style="position: absolute; top: 500px; left: 50px">
         </audio>
-        <audio src="Audio/Earth, Wind & Fire - Shining Star (Audio).mp3" controls style="position: absolute; top: 600px; left: 50px">
+        <audio src="../Audio/Earth, Wind & Fire - Shining Star (Audio).mp3" controls style="position: absolute; top: 600px; left: 50px">
         </audio>
     </left>
 <center>
-        <audio src="Audio/Swing - Danny Ocean.mp3" controls style="position: absolute; top: 200px; left: 500px">
+        <audio src="../Audio/Swing - Danny Ocean.mp3" controls style="position: absolute; top: 200px; left: 500px">
         </audio>
-        <audio src="Audio/Ni Tú Ni Nadie.mp3" controls style="position: absolute; top: 300px; left: 500px">
+        <audio src="../Audio/Ni Tú Ni Nadie.mp3" controls style="position: absolute; top: 300px; left: 500px">
         </audio>
-        <audio src="Audio/How Deep Is Your Love.mp3" controls style="position: absolute; top: 400px; left: 500px">
+        <audio src="../Audio/How Deep Is Your Love.mp3" controls style="position: absolute; top: 400px; left: 500px">
         </audio>
-        <audio src="Audio/Cada Vez Que Digo Adios Versión Acustica.mp3" controls style="position: absolute; top: 500px; left: 500px">
+        <audio src="../Audio/cada-vez-que-digo-adios.mp3" controls style="position: absolute; top: 500px; left: 500px">
         </audio>
-        <audio src="Audio/How Much I Feel.mp3" controls style="position: absolute; top: 600px; left: 500px">
+        <audio src="../Audio/How Much I Feel.mp3" controls style="position: absolute; top: 600px; left: 500px">
         </audio>
     </center>
 <right>
-    <audio src="Audio/Remember the Time.mp3" controls style="position: absolute; top: 200px; left: 920px">
+    <audio src="../Audio/Remember the Time.mp3" controls style="position: absolute; top: 200px; left: 920px">
     </audio>
-    <audio src="Audio/Danny Ocean - Dembow (Official Audio).mp3" controls style="position: absolute; top: 300px; left: 920px">
+    <audio src="../Audio/Danny Ocean - Dembow (Official Audio).mp3" controls style="position: absolute; top: 300px; left: 920px">
     </audio>
-    <audio src="Audio/I Want To Break Free.mp3" controls style="position: absolute; top: 400px; left: 920px">
+    <audio src="../Audio/I Want To Break Free.mp3" controls style="position: absolute; top: 400px; left: 920px">
     </audio>
-    <audio src="Audio/Billie Jean.mp3" controls style="position: absolute; top: 500px; left: 920px">
+    <audio src="../Audio/Billie Jean.mp3" controls style="position: absolute; top: 500px; left: 920px">
     </audio>
-    <audio src="Audio/Nada Fue Un Error - Letra - Coti, Julieta Venegas & Paulina Rubio.mp3" controls style="position: absolute; top: 600px; left: 920px">
+    <audio src="../Audio/Nada Fue Un Error - Letra - Coti, Julieta Venegas & Paulina Rubio.mp3" controls style="position: absolute; top: 600px; left: 920px">
     </audio>
 </right>
     </body>
