--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <a href="site/index.html">Interview</a>
 
         <a href="my-week-4-website/index.html">All HTML</a>
+
+        <a href="nametag-site/nametag.html">Interview</a>
+
     </body>
 </html>
