--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <a href="my-week-4-website/index.html">All HTML</a>
 
-        <a href="nametag-site/nametag.html">Interview</a>
+        <a href="nametag-site/nametag.html">Name tag</a>
 
     </body>
 </html>
