--- a/nametag-site/nametag.html
+++ b/nametag-site/nametag.html
@@ -1,11 +1,18 @@
 <html>
     <head>
         <title>Roberta Ramos Nametag</title>
+        <link rel="stylesheet" href="nametag-style.css">
     </head>
-
-    <body>
-
+<body>
+        <div class="box">
+            <div class="card">
+                <div class="box box1">
+                 <p>Communication Design</p>
+                 <h1>Roberta Ramos</h1>
+                </div>
+                <div class="bg"></div>
+            </div>
+        </div>
         
-
-    </body>
+</body>
 </html>
