--- a/nametag-site/nametag.html
+++ b/nametag-site/nametag.html
@@ -1,18 +1,19 @@
 <html>
     <head>
         <title>Roberta Ramos Nametag</title>
-        <link rel="stylesheet" href="nametag-style.css">
+        <link rel="stylesheet" href="css/nametag-style.css">
     </head>
 <body>
-        <div class="box">
+        <div class="quotes">
             <div class="card">
                 <div class="box box1">
                  <p>Communication Design</p>
                  <h1>Roberta Ramos</h1>
+                 <h2>parsons '23</h2>
                 </div>
                 <div class="bg"></div>
             </div>
         </div>
-        
+
 </body>
 </html>
