expressive text fixing

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 
         <a href="nametag-site/nametag.html">Name tag</a>
 
+        <a href="expressive-text/expressive-text.html">Expressive Text</a>
+
     </body>
 </html>
