--- a/expressive-text/expressive-text.html
+++ b/expressive-text/expressive-text.html
@@ -5,37 +5,7 @@
     </head>
     <body>
         <section>
-            <h2>Cherry Flavored</h2>
-            <div class="set">
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-            </div>
-            <div class="set set2">
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-            </div>
-            <div class="set set3">
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-                <div><img src="images/cherry-1.png"></div>
-            </div>
+            <h2>Cherry Flavoured</h2>
             <p>
                 Sweet and sour motivation
     Wish I could keep concentration
@@ -76,6 +46,38 @@
     Lover boy
     Cold
             </p>
+            <div class="set">
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+            </div>
+            <div class="set set2">
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+            </div>
+            <div class="set set3">
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+                <div><img src="images/cherry-1.png"></div>
+            </div>
+            <audio src="audio/cherry-flavoured.mp3" controls style="position: absolute">
+            </audio>
         </section>
     </body>
 </html>
