color changes, text changes

--- a/expressive-text/expressive-text.html
+++ b/expressive-text/expressive-text.html
@@ -6,46 +6,46 @@
     <body>
         <section>
             <h2>Cherry Flavoured</h2>
-            <p>
-                Sweet and sour motivation
-    Wish I could keep concentration
-    I've been gettin' high
-    It's keeping me low now
-    I'm doin' it alone now
-    I think I gotta slow down
-    And I know I
-    I gotta take control now
-    But I sold my soul a long time ago
-    I feel like a ghost now
-    Cherry flavored conversations with you
-    Got me hanging on
-    Down to Earth from all the waiting
-    Take me somewhere beyond
-    I've been gettin' high
-    But I don't ever stay up, no no
-    I feel like I'm fading, yeah
-    Give me stimulation now
-    Get me to the next level
-    Come on, give me levitation, God
-    Slow dancin' with the devil
-    Sent my soul on a little vacation
-    I've been gettin' high
-    It's keeping me low now
-    I'm doin' it alone now
-    I think I gotta slow down
-    I know I
-    I gotta take control now
-    But I sold my soul a long time ago
-    I feel like a ghost now
-    Cherry flavored conversations
-    Lover boy
-    Body toy
-    Cold, cold, body toy
-    Cold, cold, I tried to drown
-    All the pills, I wish they'd
-    Lover boy
-    Cold
-            </p>
+            <p>Sweet and sour motivation</p>
+            <p2>I could keep concentration</p2>
+            <p3>I've been gettin' high</p3>
+            <p4>It's keeping me low now</p4>
+            <p5>I'm doin' it alone now</p5>
+            <p6>I think I gotta slow down</p6>
+            <p7>And I know I</p7>
+            <p8>I gotta take control now</p8>
+            <p9>But I sold my soul a long time ago</p9>
+            <p10>I feel like a ghost now</p10>
+            <p11>Cherry flavored conversations with you</p11>
+            <p12>Got me hanging on</p12>
+            <p13>Down to Earth from all the waiting</p13>
+            <p14>Take me somewhere beyond</p14>
+            <p15>I've been gettin' high</p15>
+            <p16>But I don't ever stay up, no no</p16>
+            <p17>I feel like I'm fading, yeah</p17>
+            <p18> Give me stimulation now</p18>
+            <p19>Get me to the next level</p19>
+            <p20>Come on, give me levitation, God</p20>
+            <p21>Slow dancin' with the devil</p21>
+            <p22>Sent my soul on a little vacation</p22>
+            <p23>I've been gettin' high</p23>
+            <p24>It's keeping me low now</p24>
+            <p25>I'm doin' it alone now</p25>
+            <p26>I think I gotta slow down</p26>
+            <p27>I know I</p27>
+            <p28>I gotta take control now</p28>
+            <p29>But I sold my soul a long time ago</p29>
+            <p30>I feel like a ghost now</p30>
+            <p31>Cherry flavored conversations</p31>
+            <p32>Lover boy</p32>
+            <p33>Body toy</p33>
+            <p34>Cold, cold, body toy</p34>
+            <p35>Cold, cold, I tried to drown</p35>
+            <p36>All the pills, I wish they'd</p36>
+            <p37>Lover boy</p37>
+            <p38>Cold</p38>
+            <audio src="audio/cherry-flavoured.mp3" controls style="position: absolute"></audio>
+        </audio>
             <div class="set">
                 <div><img src="images/cherry-1.png"></div>
                 <div><img src="images/cherry-1.png"></div>
@@ -76,8 +76,6 @@
                 <div><img src="images/cherry-1.png"></div>
                 <div><img src="images/cherry-1.png"></div>
             </div>
-            <audio src="audio/cherry-flavoured.mp3" controls style="position: absolute">
-            </audio>
         </section>
     </body>
 </html>
