--- a/expressive-text/expressive-text.html
+++ b/expressive-text/expressive-text.html
@@ -4,8 +4,10 @@
         <link rel="stylesheet" href="css/expressive-text.css">
     </head>
     <body>
-        <h2>Cherry Flavoured</h2>
         <section>
+            <div class="song-title">
+                <h2>Cherry Flavoured</h2>
+            </div>
             <p>Sweet and sour motivation</p>
             <p2>I could keep concentration</p2>
             <p3>I've been gettin' high</p3>
