--- a/Abstracted-Web/abstract-web.html
+++ b/Abstracted-Web/abstract-web.html
@@ -4,10 +4,35 @@
     <link rel="stylesheet" href="css/abstract-web.css">
 </head>
 <body>
-  <div class="card">
-<a href="abstract-web.html"><image class="card-image" src="images/title-02.jpg"></a>
-<a href="abstract-2.html"><image class="card-image2" src="images/worth-it.jpg"></a>
-<a href="abstract-3.html"><image class="card-image3" src="images/the-new-kid.jpg"></a>
+  <div class="parent-1">
+    <div class="child-1">
+    <a href="abstract-web.html"><img src="images/title-02.jpg" alt=""></a>
+  </div>
+  </div>
+  <div class="parent">
+    <div class="child1">
+     <a href="abstract-web.html"><img src="images/worth-it.jpg" alt=""></a>
+    </div>
+    <div class="child2">
+      <a href="abstract-web.html"><img src="images/the-new-kid.jpg" alt=""></a>
+    </div>
 </div>
+<imput type="checkboc" id="check">
+  <label for="check">
+    <i class="fas fa-bars" id="btn"></i>
+    <i class="fas fa-bars" id="cancel"></i>
+  </label>
+  <div class="sidebar">
+    <ul>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Biography</a></li>
+      <li><a href="#">Work Archive</a></li>
+      <li><a href="#">Hand Drawn Type</a></li>
+      <li><a href="#">Geometric</a></li>
+      <li><a href="#">Collaborations</a></li>
+      <li><a href="#">Editorial</a></li>
+      <li><a href="#">Talks & Interviews</a></li>
+    </ul>
+  </div>
 </body>
 </hmtl>
