--- a/Abstracted-Web/abstract-web.html
+++ b/Abstracted-Web/abstract-web.html
@@ -4,25 +4,10 @@
     <link rel="stylesheet" href="css/abstract-web.css">
 </head>
 <body>
-  <div class="parent-1">
-    <div class="child-1">
-    <a href="abstract-web.html"><img src="images/title-02.jpg" alt=""></a>
+  <div class="btn">
+    <span class="fas fa-bars"></span>
   </div>
-  </div>
-  <div class="parent">
-    <div class="child1">
-     <a href="abstract-web.html"><img src="images/worth-it.jpg" alt=""></a>
-    </div>
-    <div class="child2">
-      <a href="abstract-web.html"><img src="images/the-new-kid.jpg" alt=""></a>
-    </div>
-</div>
-<imput type="checkboc" id="check">
-  <label for="check">
-    <i class="fas fa-bars" id="btn"></i>
-    <i class="fas fa-bars" id="cancel"></i>
-  </label>
-  <div class="sidebar">
+  <nav class="sidebar">
     <ul>
       <li><a href="#">Contact</a></li>
       <li><a href="#">Biography</a></li>
@@ -33,6 +18,25 @@
       <li><a href="#">Editorial</a></li>
       <li><a href="#">Talks & Interviews</a></li>
     </ul>
+  </nav>
+  <div class="parent-1">
+    <div class="child-1">
+    <a href="abstract-web.html"><img src="images/title-02.jpg" alt=""></a>
   </div>
+  </div>
+  <div class="parent">
+    <div class="child1">
+     <a href="abstract-web1.html"><img src="images/1.png" alt=""></a>
+    </div>
+    <div class="child2">
+      <a href="abstract-web2.html"><img src="images/2.png" alt=""></a>
+    </div>
+</div>
+<imput type="checkboc" id="check">
+  <label for="check">
+    <i class="fas fa-bars" id="btn"></i>
+    <i class="fas fa-bars" id="cancel"></i>
+  </label>
+
 </body>
 </hmtl>
