--- a/toy-website/pages/toy1.html
+++ b/toy-website/pages/toy1.html
@@ -11,14 +11,23 @@
     </div>
     <div class="container1">
         <div class="box1">
-            <img class="rain" src="../images/blue-option-1-02.png">
+            <img class="rain" src="../images/blue-option-1-02.png" alt="rainy cloud">
         </div>
         <audio controls class="audio1">
             <source src="../sounds/rain.mp3" type="audio/mpeg">
         </audio>
-        <div class="box2"><img class="wind" src="../images/blue-option-2-03.png" alt=""></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
+        <div class="box2"><img class="wind" src="../images/blue-option-2-03.png" alt="wind"></div>
+        <audio controls class="audio2">
+            <source src="../sounds/wind.mp3" type="audio/mpeg">
+        </audio>
+        <div class="box3"><img class="wave" src="../images/blue-option-2-03.png" alt="ocean wave"></div>
+        <audio controls class="audio3">
+            <source src="../sounds/wave.mp3" type="audio/mpeg">
+        </audio>
+        <div class="box4"><img class="fire" src="../images/blue-option-4-02.png" alt="fire"></div>
+        <audio controls class="audio4">
+            <source src="../sounds/fire.mp3" type="audio/mpeg">
+        </audio>
     </div>
 </body>
 </html>
