--- a/toy-website/pages/toy1.html
+++ b/toy-website/pages/toy1.html
@@ -29,5 +29,8 @@
             <source src="../sounds/fire.mp3" type="audio/mpeg">
         </audio>
     </div>
+    <div id="image-container">
+        <img id="note" src="../images/note.png" />
+    </div>
 </body>
 </html>
