--- a/toy-website/toy.html
+++ b/toy-website/toy.html
@@ -9,5 +9,8 @@
         <a href="pages/toy1.html"><div class="box"></div></a>
         <a href="pages/toy2.html"><div class="box2"></div></a>
     </div>
+    <div id="image-container">
+        <img id="note" src="images/note.png" />
+    </div>
 </body>
 </html>
