--- a/portfolio-website-final/index.html
+++ b/portfolio-website-final/index.html
@@ -68,7 +68,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I am Roberta</h2>
-                        <p class="about__text">I am currently a student at Parsons School of Design. Currently I am s second year student from their Communication Design (BFA) undergraduate program.</p>           
+                        <p class="about__text">I am 20 a student at Parsons School of Design. Currently I am a second year student from their Communication Design (BFA) undergraduate program.</p>           
                     </div>                                   
                 </div>
             </section>
