--- a/portfolio-website-final/index.html
+++ b/portfolio-website-final/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Roberta's Portfolio page for Core 1 interaction" />
+        <meta name="keywords" content="HTML, CSS, JavaScript, Portfolio, Illustrator, Photoshop, Indesign, Premiere Pro, Audition, Adobe, Visual Studio Code" />
 
         <link rel="stylesheet" href="./css/styles.css">
 
