abstract-web: instagram

--- a/toy-website/toy.html
+++ b/toy-website/toy.html
@@ -1,5 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>toy</title>
         <link rel="stylesheet" href="css/toy.css">
         <script src="js/global.js"></script>
@@ -12,5 +16,12 @@
     <div id="image-container">
         <img id="note" src="images/note.png" />
     </div>
+
+    <div id="container">
+
+        <div id="msg">object</div>
+        
+        <div id ="object"> gdfg</div>
+      </div>
 </body>
 </html>
