--- a/abstract_web/index.html
+++ b/abstract_web/index.html
@@ -51,24 +51,30 @@
 	<div class="footer">
 		<div class="links">
 			<ul>
-				<li><a href="#">ABOUT US</a></li>
-				<li><a href="#">SUPPORT</a></li>
-				<li><a href="#">PRESS</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Jobs</a></li>
 				<li><a href="#">API</a></li>
-				<li><a href="#">JOBS</a></li>
-				<li><a href="#">PRIVACY</a></li>
-				<li><a href="#">TERMS</a></li>
-				<li><a href="#">DIRECTORY</a></li>
-				<li><a href="#">PROFILES</a></li>
-				<li><a href="#">HASHTAGS</a></li>
-				<li><a href="#">LANGUAGE</a></li>
+				<li><a href="#">Privacy</a></li>
+				<li><a href="#">Terms</a></li>
+				<li><a href="#">Top Accounts</a></li>
+				<li><a href="#">Hashtags</a></li>
+				<li><a href="#">Locations</a></li>
+			</ul>
+			<ul>
+				<li><a href="#">Beauty</a></li>
+				<li><a href="#">Dance & Performance</a></li>
+				<li><a href="#">Fitness</a></li>
+				<li><a href="#">Food & Drink</a></li>
+				<li><a href="#">Home & Garden</a></li>
+				<li><a href="#">Music</a></li>
+				<li><a href="#">Visual Arts</a></li>
 			</ul>
 		</div>
-		<div class="copyright">
-			© 2020 INSTAGRAM
-		</div>
+	</div>
+	<div class="copyright">
+		© 2020 Instagram from Facebook
 	</div>
 </div>
-
 </body>
 </html>
